# paper-select

./: .gitignore  LICENSE  README.md  pyproject.toml
paper-select/: demo_select.ipynb  ollama_demo.ipynb
